@@ -4,10 +4,10 @@
 * Project:         Cambusa                                                  *
 * Version:         2.00                                                     *
 * Description:     Cambusa resources for applications                       *
-* Copyright (C):   2017  Rodolfo Calzetti                                   *
+* Copyright (C):   2018  Rodolfo Calzetti                                   *
 *                  License GNU LESSER GENERAL PUBLIC LICENSE Version 3      *
 * Contact:         https://github.com/cambusa                               *
 *                  postmaster@rudyz.net                                     *
 ****************************************************************************/
-$cacheversion=247;
+$cacheversion=248;
 ?>
