@@ -169,7 +169,7 @@ class Crypt_RC4 {
      * @return Crypt_RC4
      * @access public
      */
-    function Crypt_RC4()
+    function __construct()
     {
         if ( !defined('CRYPT_RC4_MODE') ) {
             switch (true) {
