@@ -212,7 +212,7 @@ class File_ANSI {
      * @return File_ANSI
      * @access public
      */
-    function File_ANSI()
+    function __construct()
     {
         $this->setHistory(200);
         $this->setDimensions(80, 24);
