@@ -1,4 +1,10 @@
 ==================================
+Rilascio v2.0.27    del 23/12/2017
+==================================
+
+Utilizzato __construct come costruttore di classe nei PHP.
+
+==================================
 Rilascio v2.0.26    del 05/09/2017
 ==================================
 
